# homedisplay

./: .gitignore  AnalogClock.cpp  AnalogClock.h  CMakeLists.txt  KodiLcdServer.cpp  KodiLcdServer.h  LcdHandler.cpp  LcdHandler.h  MythClock.cpp  MythClock.h  MythFrame.cpp  MythFrame.h  MythLcdServer.cpp  MythLcdServer.h  README.md  bigclock.cpp  clockdisplay.cpp  clockdisplay.h  compassrose.cpp  customlabel.cpp  customlabel.h  environment.cpp  environment.h  inside.cpp  inside.h  lux.cpp  lux.h  main.cpp  mythclock.pro  piclock.service  primarydisplay.cpp  primarydisplay.h  qmqttsubscriber.cpp  qmqttsubscriber.h  qmqueue.cpp  qmqueue.h  resizeEventFilter.cpp  resizeEventFilter.h  sonosdisplay.cpp  sonosdisplay.h  (+7 more)
config/: MythClock.ini  homedisplay.ini
src/: bigclock.cpp  bigclock.h  clockdisplay.cpp  clockdisplay.h  compassrose.h  countdownwidget.cpp  countdownwidget.h  customlabel.cpp  customlabel.h  defines.h  environment.cpp  environment.h  happynyewidget.cpp  happynyewidget.h  lux.cpp  lux.h  main.cpp  noson.cpp  noson.h  nye.cpp  nye.h  primarydisplay.cpp  primarydisplay.h  qmqttsubscriber.cpp  sonosdisplay.cpp  sonosdisplay.h  weather.cpp  weather.h  weatherdisplay.cpp  weatherdisplay.h
